fixed alignment of sticky element

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,7 @@
 @import "variables";
 footer {
     background-color: $featherColorPink;
+    border-radius: 0 30px 0 0;
     height: auto;
     padding: 10vh 0 8vh 0;
 
